--- a/_config.yml
+++ b/_config.yml
@@ -5,29 +5,29 @@ url: "http://www.your-domain.com" # the base hostname & protocol for your site
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Tyrion Lannister # Your name will go here
+  title: Tom Conkwright # Your name will go here
   description: "A personal portfolio and blog website" # used by search engines
 
   # Header and footer text
   header_text: >
-     <h1>Witty & Hilarious Rails Developer</h1>
-     <p>I'm a kickass developer specializing in Rails, AngularJS, and MongoDB.</p>
+     <h1>An Aspiring Sofware Engineer</h1>
+     <p>I'm a fledgling developer learning whatever I can to be useful.</p>
   header_text_feature_image:
   footer_text: >
-   Powered by <a href="http://jekyllrb.com">Jekyll</a> and made with love.
+   Powered by <a href="http://jekyllrb.com">Jekyll</a>.
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: tmconkwright@gmail.com # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
   dribbble:
   facebook:
   flickr:
-  github: # github profile name, e.g. "madebymunsters"
+  github: ConkyTom # github profile name, e.g. "madebymunsters"
   google_plus:
-  instagram:
-  linkedin:  # Full URL
+  instagram: ConkyTome
+  linkedin: https://www.linkedin.com/in/thomas-conkwright-33791773 # Full URL
   pinterest:
   reddit:
   soundcloud:
