Case studies added

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ theme_settings:
   flickr:
   github: ConkyTom # github profile name, e.g. "madebymunsters"
   google_plus:
-  instagram: ConkyTome
+  instagram: ConkyTom
   linkedin: https://www.linkedin.com/in/thomas-conkwright-33791773 # Full URL
   pinterest:
   reddit:
