--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ url: "https://conkytom.com" # the base hostname & protocol for your site
 theme_settings:
   # Meta
   title: Tom Conkwright # Your name will go here
-  description: "A personal portfolio and blog website" # used by search engines
+  description: "A personal portfolio and blog website of Tom Conkwright" # used by search engines
 
   # Header and footer text
   header_text: >
-     <h1>An Aspiring Sofware Engineer</h1>
-     <p>I'm a fledgling developer learning whatever I can to be useful.</p>
+     <h1>An Philadelphia Based Sofware Engineer</h1>
+     <p>A fresh developer learning whatever I can to be useful.</p>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="https://jekyllrb.com">Jekyll</a>.
@@ -27,14 +27,14 @@ theme_settings:
   github: ConkyTom # github profile name, e.g. "madebymunsters"
   google_plus:
   instagram: ConkyTom
-  linkedin: https://www.linkedin.com/in/thomas-conkwright-33791773 # Full URL
+  linkedin: https://www.linkedin.com/in/tom-conkwright # Full URL
   pinterest:
   reddit:
   soundcloud:
   stack_exchange:  # Full URL
   steam:
   tumblr:
-  twitter:
+  twitter: https://twitter.com/conkytom 
   wordpress:
   youtube:
 
